carga de comprar y redirecion a checkout

--- a/productos.html
+++ b/productos.html
@@ -60,6 +60,10 @@
         
     </div>
     
+    <div class="cargando__compra">
+        <span>Cargando compra</span>
+        <div class="circle__cargando"></div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
