--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 <body>
     <header>
         <a href="index.html">ak8</a>
-        <div class="cart"></div>
+        <div class="cart" id="iconcarrito">
+            <span class="cantidadcart"></span>
+            <div class="circle" id="circle"></div>
+        </div>
     </header>
 
     <main >
@@ -22,6 +25,6 @@
         <a href="productos.html" class="button">Explorar</a>
        </div>
     </main>
-    
+    <script src="script.js"></script>
 </body>
 </html>
