fetch api productos

--- a/comprahecha.html
+++ b/comprahecha.html
@@ -5,11 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/productos.css">
 </head>
 <body>
-    <a href="productos.html">Volver al inicio</a>
+    
     <h2>Checkout</h2>
     <p> Si esta fuera una pagina "real" aca iria un checkout con tarjetas y demases</p>
-    
+    <a href="index.html" class="button">Volver al inicio</a>
 </body>
 </html>
