--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/productos.css">
     
 </head>
 <body>
@@ -25,6 +26,14 @@
         <a href="productos.html" class="button">Explorar</a>
        </div>
     </main>
+    <div class="carritomain">
+        <div class="carritovacio">
+        <h2>Tu carrito esta vacio</h2>
+        <img src="img/cartvacio__llorando.svg" alt="">
+        <span>Aprovecha y adquiere productos de calidad</span>
+        <a class="button" href="productos.html">Explorar</a>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
