--- a/index.html
+++ b/index.html
@@ -1,35 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/productos.css">
-    
-</head>
-<body>
+    <link rel="stylesheet" href="css/normalize.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/productos.css" />
+  </head>
+  <body>
     <header>
-        <a href="index.html">ak8</a>
+      <a href="index.html">ak8</a>
     </header>
 
-    <main >
-       <div class="container" id="hero__section">
+    <main>
+      <div class="container" id="hero__section">
         <h2>Encuentra todo</h2>
-        <p>Desde ruedas hasta zapatillas, de argentina e importado, siempre de la mejor calidad</p>
+        <p>
+          Desde ruedas hasta zapatillas, de argentina e importado, siempre de la
+          mejor calidad
+        </p>
         <a href="productos.html" class="button">Explorar</a>
-       </div>
+      </div>
     </main>
     <div class="carritomain">
-        <div class="carritovacio">
+      <div class="carritovacio">
         <h2>Tu carrito esta vacio</h2>
-        <img src="img/cartvacio__llorando.svg" alt="">
+        <img src="img/cartvacio__llorando.svg" alt="" />
         <span>Aprovecha y adquiere productos de calidad</span>
         <a class="button" href="productos.html">Explorar</a>
-        </div>
+      </div>
     </div>
-    <script src="script.js"></script>
-</body>
+  </body>
 </html>
